--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "@tailwindcss/vite": "^4.1.5",
     "react": "^19.0.0",
+    "react-compare-image": "^3.5.4",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.5"
