ADD running readme

--- a/db/.env.example
+++ b/db/.env.example
@@ -1,2 +1,2 @@
-PORT=
-MONGO_URL=
+PORT=3000
+MONGO_URL=mongodb+srv://samtsai:samthebear0421@database.kgusi1w.mongodb.net/?retryWrites=true&w=majority&appName=Database
